<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="argsRegion"
            type="com.alxd.testelaniin.ui.teams.AddTeamsFragmentArgs" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.teams.AddTeamsFragment">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/crear_equipo"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnSaveTeam"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvInfoTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardElevation="1dp"
            app:cardCornerRadius="4dp"
            app:cardBackgroundColor="@color/lightGray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <TextView
                android:id="@+id/tvInfoTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/info_team"
                android:fontFamily="@font/ubuntu_regular"
                android:textColor="@color/red_color"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTeamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/nombre_de_tu_equipo"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvInfoTeam" />

        <EditText
            android:id="@+id/etTeamName"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="text"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/mi_equipo_1"
            android:background="@drawable/custom_input"
            android:textColor="@color/darkGray"
            android:textColorHint="@color/darkGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTeamName"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tvRegiontxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/region"
            android:textSize="16sp"
            android:textColor="@color/text_color"
            android:fontFamily="@font/ubuntu_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTeamName"/>

        <TextView
            android:id="@+id/tvRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@{argsRegion.currentRegion.name}"
            android:textColor="@color/darkGray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvRegiontxt"
            app:layout_constraintStart_toEndOf="@+id/tvRegiontxt"
            app:layout_constraintTop_toTopOf="@+id/tvRegiontxt" />

        <TextView
            android:id="@+id/tvSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/selecciona_tus_pokemon"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegiontxt" />

        <LinearLayout
            android:id="@+id/llPoke1"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSelect">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAddPokemon1"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:orientation="vertical"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="1dp"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="@color/light">
                <ImageView
                    android:id="@+id/ivImagePokemon1"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:src="@drawable/silueta"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/tvNamePokemon1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pokemon 1"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textColor="@color/text_color"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="2dp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAddPokemon2"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="1dp"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="@color/light">
                <ImageView
                    android:id="@+id/ivImagePkemon2"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:src="@drawable/silueta"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/tvNamePokemon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pokemon 2"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textColor="@color/text_color"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="2dp"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPoke2"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llPoke1">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAddPokemon3"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:orientation="vertical"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="1dp"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="@color/light">
                <ImageView
                    android:id="@+id/ivImagePokemon3"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:src="@drawable/silueta"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/tvNamePokemon3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pokemon 3"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textColor="@color/text_color"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="2dp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAddPokemon4"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="1dp"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="@color/light">
                <ImageView
                    android:id="@+id/ivImagePkemon4"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:src="@drawable/silueta"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/tvNamePokemon4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pokemon 4"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textColor="@color/text_color"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="2dp"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPoke3"
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llPoke2">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAddPokemon5"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:orientation="vertical"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="1dp"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="@color/light">
                <ImageView
                    android:id="@+id/ivImagePokemon5"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:src="@drawable/silueta"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/tvNamePokemon5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pokemon 5"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textColor="@color/text_color"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="2dp"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAddPokemon6"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="1dp"
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="@color/light">
                <ImageView
                    android:id="@+id/ivImagePkemon6"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:src="@drawable/silueta"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/tvNamePokemon6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pokemon 6"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textColor="@color/text_color"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="2dp"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/darkGray"
            android:alpha=".9"
            android:elevation="8dp"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/pdAddTeams"
                android:layout_width="150dp"
                android:layout_height="150dp"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>